--- a/smartnfts/styles/Token.module.css
+++ b/smartnfts/styles/Token.module.css
@@ -19,6 +19,22 @@
   max-width: 350px;
 }
 
+.claimButton {
+  margin-top: 20px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  background-color: #f5f5f5;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 600;
+  color: #000;
+  width: 85vw;
+  margin-top: 1.5rem;
+  padding: 10px 0;
+  height: 48px;
+}
+
 .card:hover,
 .card:focus,
 .card:active {
